--- a/BuzzTrack/app/src/main/res/layout/activity_home.xml
+++ b/BuzzTrack/app/src/main/res/layout/activity_home.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_home"
@@ -8,50 +9,77 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#1A27B2"
     tools:context="com.example.elliot.buzztrack.Home">
-
-    <TextView
-        android:text="TextView"
-        android:id="@+id/textView"
-        android:layout_marginTop="65dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button2"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:layout_marginTop="16dp"
         android:id="@+id/CurDrink"
+        tools:text="BAC: "
+        android:inputType="text"
+        style="@android:style/Widget.AutoCompleteTextView"
+        android:text="text"
+        android:layout_marginBottom="27dp"
+        android:clickable="false"
+        android:textAlignment="center"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:id="@+id/editText"
         tools:text="Currently Drinking:"
         android:inputType="text"
         style="@android:style/Widget.AutoCompleteTextView"
         android:text="text"
-        android:layout_alignParentTop="true"
+
+        android:clickable="false"
+        android:textAlignment="center"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="22dp"
+        android:layout_above="@+id/ChangeDrink"
+        android:layout_alignParentTop="true" />
+
+    <Button
+        android:text="ChangeDrink"
+        android:layout_height="wrap_content"
+        android:id="@+id/ChangeDrink"
+        style="@android:style/Widget.Button"
+        android:layout_width="200dp"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:layout_marginBottom="50dp"
+        android:layout_above="@+id/Drink"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="Undo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Undo"
+        android:elevation="0dp"
+        style="@android:style/Widget.Button"
+        android:layout_marginBottom="50dp"
+
+        android:layout_above="@+id/CurDrink"
+        android:layout_alignEnd="@+id/Drink"
+        android:layout_alignStart="@+id/Drink" />
 
     <Button
         android:text="Drink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button2"
+        android:id="@+id/Drink"
         android:elevation="0dp"
         style="@android:style/Widget.Button"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/button"
-        android:layout_alignEnd="@+id/button" />
+        android:layout_marginBottom="50dp"
+        android:layout_above="@+id/Undo"
+        android:layout_alignStart="@+id/ChangeDrink"
+        android:layout_alignEnd="@+id/ChangeDrink" />
 
-    <Button
-        android:text="ChangeDrink"
-        android:layout_height="wrap_content"
-        android:id="@+id/button"
-        style="@android:style/Widget.Button"
-        android:layout_width="200dp"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:layout_marginBottom="47dp"
-        android:layout_above="@+id/button2"
-        android:layout_alignStart="@+id/CurDrink" />
+
 </RelativeLayout>
