--- a/BuzzTrack/app/src/main/res/layout/activity_home.xml
+++ b/BuzzTrack/app/src/main/res/layout/activity_home.xml
@@ -12,38 +12,41 @@
     android:background="#1A27B2"
     tools:context="com.example.elliot.buzztrack.Home">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:id="@+id/CurDrink"
-        tools:text="BAC: "
-        android:inputType="text"
-        style="@android:style/Widget.AutoCompleteTextView"
-        android:text="text"
-        android:layout_marginBottom="27dp"
-        android:clickable="false"
-        android:textAlignment="center"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true" />
 
-    <EditText
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:id="@+id/editText"
+        android:id="@+id/curDrink"
         tools:text="Currently Drinking:"
-        android:inputType="text"
+        android:inputType="none"
         style="@android:style/Widget.AutoCompleteTextView"
-        android:text="text"
+        android:text="Currently Drinking:"
 
-        android:clickable="false"
         android:textAlignment="center"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="22dp"
         android:layout_above="@+id/ChangeDrink"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:clickable="false" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:id="@+id/BAC"
+        tools:text="BAC: "
+        android:inputType="none"
+        style="@android:style/Widget.AutoCompleteTextView"
+        android:text="BAC: "
+        android:layout_marginBottom="27dp"
+        android:clickable="false"
+        android:textAlignment="center"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:text="ChangeDrink"
@@ -54,7 +57,8 @@
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:layout_marginBottom="50dp"
         android:layout_above="@+id/Drink"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="changeDrink"/>
 
     <Button
         android:text="Undo"
@@ -65,7 +69,7 @@
         style="@android:style/Widget.Button"
         android:layout_marginBottom="50dp"
 
-        android:layout_above="@+id/CurDrink"
+        android:layout_above="@+id/BAC"
         android:layout_alignEnd="@+id/Drink"
         android:layout_alignStart="@+id/Drink" />
 
