--- a/BuzzTrack/app/src/main/res/layout/activity_home.xml
+++ b/BuzzTrack/app/src/main/res/layout/activity_home.xml
@@ -38,15 +38,16 @@
         android:ems="10"
         android:id="@+id/BAC"
         tools:text="BAC: "
-        android:inputType="none"
         style="@android:style/Widget.AutoCompleteTextView"
         android:text="BAC: "
         android:layout_marginBottom="27dp"
-        android:clickable="false"
         android:textAlignment="center"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:editable="false"
+        android:clickable="false"
+        android:inputType="none" />
 
     <Button
         android:text="ChangeDrink"
