--- a/BuzzTrack/app/src/main/res/layout/activity_change_drink.xml
+++ b/BuzzTrack/app/src/main/res/layout/activity_change_drink.xml
@@ -131,6 +131,7 @@
         android:layout_below="@+id/DrinkName"
         android:layout_alignStart="@+id/DrinkName"
         android:layout_marginStart="88dp"
+        android:onClick="saveDrink"
         android:layout_toStartOf="@+id/Liqour" />
 
 </RelativeLayout>
