--- a/BuzzTrack/app/src/main/res/layout/activity_change_drink.xml
+++ b/BuzzTrack/app/src/main/res/layout/activity_change_drink.xml
@@ -23,16 +23,16 @@
         tools:text="Wine" />
 
     <Button
-        android:text="Liqour"
+        android:text="Liquor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="28dp"
-        android:id="@+id/Liqour"
+        android:id="@+id/Liquor"
         android:layout_alignBaseline="@+id/Wine"
         android:layout_alignBottom="@+id/Wine"
         android:layout_alignParentEnd="true"
-        android:onClick="liqour"
-        tools:text="Liqour" />
+        android:onClick="liquor"
+        tools:text="Liquor" />
 
     <Button
         android:text="Beer"
@@ -54,14 +54,14 @@
         android:id="@+id/textView"
         android:layout_below="@+id/Wine"
         android:layout_alignStart="@+id/Beer"
-        android:layout_alignEnd="@+id/Liqour"
+        android:layout_alignEnd="@+id/Liquor"
         android:textAlignment="center"
         tools:text="Alcoholic Beverage Content (measured in %)" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
+        android:inputType="number|numberDecimal"
         android:ems="10"
         android:layout_marginTop="19dp"
         android:id="@+id/ABV"
@@ -70,7 +70,7 @@
         android:layout_alignEnd="@+id/textView"
         android:textAlignment="center"
         android:hint="40.0"
-        />
+        android:singleLine="true" />
 
     <TextView
         android:text="Liquid Ammount (measured in Fluid OZ)"
@@ -87,14 +87,15 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
+        android:inputType="number|numberDecimal"
         android:ems="10"
         android:id="@+id/FluidOZ"
         android:hint="12.0"
         android:layout_centerVertical="true"
         android:layout_alignStart="@+id/textView2"
         android:textAlignment="center"
-        android:layout_alignEnd="@+id/ABV" />
+        android:layout_alignEnd="@+id/ABV"
+        android:singleLine="true" />
 
     <TextView
         android:text="Name of your drink"
@@ -119,7 +120,8 @@
         android:layout_alignStart="@+id/textView3"
         android:hint="Whiskey Sour"
         android:textAlignment="center"
-        android:layout_alignEnd="@+id/textView3" />
+        android:layout_alignEnd="@+id/textView3"
+        android:singleLine="true" />
 
     <Button
         android:text="Save Drink"
@@ -132,6 +134,6 @@
         android:layout_alignStart="@+id/DrinkName"
         android:layout_marginStart="88dp"
         android:onClick="saveDrink"
-        android:layout_toStartOf="@+id/Liqour" />
+        android:layout_toStartOf="@+id/Liquor" />
 
 </RelativeLayout>
