--- a/BuzzTrack/app/src/main/res/layout/activity_home.xml
+++ b/BuzzTrack/app/src/main/res/layout/activity_home.xml
@@ -13,25 +13,6 @@
     tools:context="com.example.elliot.buzztrack.Home">
 
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:id="@+id/curDrink"
-        tools:text="Currently Drinking:"
-        android:inputType="none"
-        style="@android:style/Widget.AutoCompleteTextView"
-        android:text="Currently Drinking:"
-
-        android:textAlignment="center"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="22dp"
-        android:layout_above="@+id/ChangeDrink"
-        android:layout_alignParentTop="true"
-        android:clickable="false" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -85,6 +66,33 @@
         android:layout_above="@+id/Undo"
         android:layout_alignStart="@+id/ChangeDrink"
         android:layout_alignEnd="@+id/ChangeDrink" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:id="@+id/curDrink"
+        tools:text="Currently Drinking:"
+        android:inputType="none"
+        style="@android:style/Widget.AutoCompleteTextView"
+        android:text="Currently Drinking:"
+
+        android:textAlignment="center"
+        android:clickable="false"
+        android:layout_above="@+id/ChangeDrink"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="44dp" />
+
+    <Button
+        android:text="Settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:onClick="changeSettings"/>
 
 
 </RelativeLayout>
