--- a/BuzzTrack/app/src/main/res/layout/activity_home.xml
+++ b/BuzzTrack/app/src/main/res/layout/activity_home.xml
@@ -53,7 +53,8 @@
 
         android:layout_above="@+id/BAC"
         android:layout_alignEnd="@+id/Drink"
-        android:layout_alignStart="@+id/Drink" />
+        android:layout_alignStart="@+id/Drink"
+        android:onClick="removeDrink"/>
 
     <Button
         android:text="Drink"
@@ -65,7 +66,8 @@
         android:layout_marginBottom="50dp"
         android:layout_above="@+id/Undo"
         android:layout_alignStart="@+id/ChangeDrink"
-        android:layout_alignEnd="@+id/ChangeDrink" />
+        android:layout_alignEnd="@+id/ChangeDrink"
+        android:onClick="addDrink"/>
 
     <TextView
         android:layout_width="wrap_content"
