Changed some colors, and the manifest to force portrait mode.

--- a/BuzzTrack/app/src/main/res/layout/activity_change_drink.xml
+++ b/BuzzTrack/app/src/main/res/layout/activity_change_drink.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#1A27B2"
+    android:background="#CCFFCC"
     tools:context=".change_drink"
     >
 
