--- a/BuzzTrack/app/src/main/res/layout/activity_home.xml
+++ b/BuzzTrack/app/src/main/res/layout/activity_home.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#1A27B2"
+    android:background="#CCFFCC"
     tools:context="com.example.elliot.buzztrack.Home">
 
 
