--- a/BuzzTrack/app/src/main/res/layout/activity_settings.xml
+++ b/BuzzTrack/app/src/main/res/layout/activity_settings.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#1A27B2"
+    android:background="#CCFFCC"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".change_drink">
 
