--- a/BuzzTrack/app/src/main/res/layout/activity_change_drink.xml
+++ b/BuzzTrack/app/src/main/res/layout/activity_change_drink.xml
@@ -88,7 +88,7 @@
 
     <TextView
 
-        android:text="Liquid Ammount (measured in Fluid OZ)"
+        android:text="Liquid Amount (measured in Fluid OZ)"
         android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
