--- a/BuzzTrack/app/src/main/res/layout/activity_home.xml
+++ b/BuzzTrack/app/src/main/res/layout/activity_home.xml
@@ -52,26 +52,6 @@
         android:layout_alignStart="@+id/ChangeDrink"
         android:layout_alignEnd="@+id/ChangeDrink" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:id="@+id/curDrink"
-        tools:text="Currently Drinking:"
-        android:inputType="none"
-        android:textColor="#000000"
-        android:text="Currently Drinking:"
-        android:textAlignment="center"
-        android:clickable="false"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_above="@+id/Drink"
-        android:layout_marginBottom="20dp"
-        android:background="@android:color/transparent"
-        style="@android:style/Widget.AutoCompleteTextView"
-        android:layout_marginTop="13dp"
-        android:layout_below="@+id/Drinks_Consumed" />
-
     <Button
         android:text="Press when drink finished"
         android:layout_width="wrap_content"
@@ -87,23 +67,21 @@
         android:layout_alignEnd="@+id/Undo" />
 
     <TextView
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:id="@+id/BAC"
-        tools:text="BAC: "
-        style="@android:style/Widget.AutoCompleteTextView"
-        android:text="BAC: "
-        android:textAlignment="center"
-        android:editable="false"
-        android:clickable="false"
-        android:textColor="#000000"
+        android:id="@+id/curDrink"
+        tools:text="Currently Drinking:"
         android:inputType="none"
+        android:textColor="#000000"
+        android:text="Currently Drinking:"
+        android:textAlignment="center"
+        android:clickable="false"
         android:background="@android:color/transparent"
-        android:layout_below="@+id/button"
+        style="@android:style/Widget.AutoCompleteTextView"
+        android:layout_marginBottom="74dp"
+        android:layout_above="@+id/Drink"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp"
         android:layout_alignParentEnd="true" />
 
     <TextView
@@ -117,8 +95,28 @@
         android:clickable="false"
         android:textColor="#000000"
         android:background="@android:color/transparent"
-        android:layout_marginTop="18dp"
-        android:layout_below="@+id/BAC"
+        android:layout_marginBottom="30dp"
+        android:layout_above="@+id/curDrink"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:id="@+id/BAC"
+        tools:text="BAC:  0.000"
+        style="@android:style/Widget.AutoCompleteTextView"
+        android:text="BAC: 0.000"
+        android:textAlignment="center"
+        android:textSize="30dp"
+        android:editable="false"
+        android:clickable="false"
+        android:textColor="#000000"
+        android:inputType="none"
+        android:background="@android:color/transparent"
+        android:layout_marginBottom="18dp"
+        android:layout_above="@+id/Drinks_Consumed"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
 
